# NESWare.github.io

./: .gitignore  CNAME  Gemfile  _config.yml  about.md  blog.md  geno.yml  index.html  index.md  jekyll-theme-cayman.gemspec  projects.md  pyproject.toml  tag.md  tag_generator.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: blog-post.md
.github/workflows/: publish.yml
_data/: navigation.yml
_drafts/: compute-shaders-i-dont-know-what-im-doing.md
_includes/: buttons.html  navigation.html
_layouts/: default.html  post.html  project.html
_posts/: 2020-04-07-hello-world.md  2020-04-15-discord-github-classroom-pt0.md  2020-04-26-discord-github-classroom-pt1.md  2021-02-09-updates-and-burn-out.md  2021-07-17-ramping-back-up.md  2023-03-11-writing-cpp-like-it-is-python.md  2023-04-16-visualizing-a-live-cpp-model-in-python.md
_projects/: copperhead.md  euclidean-war.md  fate-erased.md
assets/css/: buttons.css  headers.css
content/: about.md  blog.md  index.md  projects.md
content/archives/: discord-github-classroom-pt0.md  discord-github-classroom-pt1.md  hello-world.md  ramping-back-up.md  updates-and-burn-out.md
content/blog/: panel-pyodide-and-wasm.py  visualizing-a-live-cpp-model-in-python.md  writing-cpp-like-it-is-python.md  writing-my-own-static-site-generator-with-panel.md
content/projects/: geno.md  hinopio.md  toadofsky.md
projects/: orbit.md
src/geno.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+2 more)
static/: about.html  blog.html  index.html  projects.html
tag/: storytime.md
templates/: blog  default
(+18 files in other folders)
