[project]
name = "geno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "holoviews>=1.20.1",
    "jinja2>=3.1.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "panel>=1.6.1",
    "pygments>=2.19.1",
]

[dependency-groups]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
geno = "geno.cli:main"
